--- a/style.css
+++ b/style.css
@@ -1,84 +1,41 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+#clockContainer {
+    position: relative;
+    margin: auto;
+    height: 40vw;
+    width: 40vw;
+    background: url(./images/clock.jpg) no-repeat;
+    background-size: 100%;
 }
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #091921;
-}
-.clock {
-    width: 350px;
-    height: 350px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url(images/clock.png);
-    background-size: cover;
-    border: 4px solid #091921;
-    border-radius: 50%;
-    box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05),
-                inset 0 -15px 15px rgba(255, 255, 255, 0.05),
-                0 15px 15px rgba(0, 0, 0, 0.3),
-                inset 0 15px 15px rgba(0, 0, 0, 0.3);
-}
-.clock:before {
-    content: '';
+
+#hour,
+#minute,
+#second {
     position: absolute;
-    width: 15px;
-    height: 15px;
-    background: #fff;
-    border-radius: 50%;
-    z-index: 10000;
+    background: black;
+    border-radius: 10px;
+    transform-origin: bottom;
 }
-.clock .hour, .clock .min, .clock .sec {
-    position: absolute;
+
+#hour {
+    width: 1.8%;
+    height: 25%;
+    top: 25%;
+    left: 48.85%;
+    opacity: 0.8;
 }
-.clock .hour, .hr {
-    width: 160px;
-    height: 160px;
+
+#minute {
+    width: 1.6%;
+    height: 30%;
+    top: 19%;
+    left: 48.9%;
+    opacity: 0.8;
 }
-.clock .min, .mn {
-    width: 190px;
-    height: 190px;
-}
-.clock .sec .sc {
-    width: 230px;
-    height: 230px;
-}
-.hr, .mn, .sc {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    border-radius: 50%;
-}
-.hr:before {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 80px;
-    background: #ff105e;
-    z-index: 10;
-    border-radius: 6px 6px 0 0;
-}
-.mn:before {
-    content: '';
-    position: absolute;
-    width: 4px;
-    height: 90px;
-    background: #fff;
-    z-index: 11;
-    border-radius: 6px 6px 0 0;
-}
-.sc:before {
-    content: '';
-    position: absolute;
-    width: 2px;
-    height: 150px;
-    background: #fff;
-    z-index: 12;
-    border-radius: 6px 6px 0 0;
+
+#second {
+    width: 1%;
+    height: 40%;
+    top: 9%;
+    left: 49.25%;
+    opacity: 0.8;
 }
